--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,5 @@ install:
   - curl -sfL https://install.goreleaser.com/github.com/ValeLint/vale.sh | sh
 script:
   - ./bin/vale app/templates/pages
+  - ./bin/vale README.md
   - linkchecker https://openpdi.org/
